--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,9 @@
   },
   "minimum-stability": "dev",
   "extra": {
+    "branch-alias": {
+		"dev-master": "1.0.x-dev"
+	},
     "hooks": {
       "pre-commit": [
         "composer test",
